--- a/common/pom.xml
+++ b/common/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>common</name>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <description>Demo project for Spring Boot</description>
 
 
