--- a/config/src/main/resources/application.properties
+++ b/config/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=8100
 #actuator endpoint
 management.endpoints.web.exposure.include=*
 
-spring.cloud.config.server.git.uri=file:///Users/renqingyang/IdeaProjects/weather/properties
+spring.cloud.config.server.git.uri=C:\\Users\\hanyu\\Code\\JavaSpring\\AntraHomework\\springCloudDemo\\weather\\properties
 
 
