--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>discovery</module>
         <module>gateway</module>
         <module>search</module>
+        <module>employee</module>
         <module>config</module>
     </modules>
 
@@ -78,6 +79,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+            <version>1.4.7.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
@@ -111,6 +119,12 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                         </exclude>
+                        <exclude>
+                            <groupId>io.springfox</groupId>
+                            <artifactId>springfox-boot-starter</artifactId>
+                        </exclude>
+                    </excludes>
+                    <excludes>
                     </excludes>
                 </configuration>
             </plugin>
