--- a/properties/gateway-dev.properties
+++ b/properties/gateway-dev.properties
@@ -9,6 +9,10 @@ spring.cloud.gateway.routes[1].uri=lb://details
 spring.cloud.gateway.routes[1].predicates[0]=Path=/details/**
 #spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
 
+spring.cloud.gateway.routes[2].id=employeeModule
+spring.cloud.gateway.routes[2].uri=lb://employee
+spring.cloud.gateway.routes[2].predicates[0]=Path=/employees/**
+
 spring.cloud.gateway.discovery.locator.enabled=true
 
 myservice.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RandomRule
